Mesh to Volume and Volume Displace modifiers crash with the new Hair Curve when pressing apply #98403

Closed
opened 2022-05-26 15:37:02 +02:00 by kin malmin · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-25 21:21, hash: dc6fe73e70
Worked: (newest version of Blender that worked as expected)

Short description of error
Add the new Hair curve random to an object, and add Mesh to Volume or Volume Displace and press apply on any of the modifiers, and blender will crash

Exact steps for others to reproduce the error

  1. add the curve Hair random to an object
  2. add Mesh to Volume or Volume Displace from the modifier tab
  3. click apply or Ctrl + A on the modifier tab and blender will crash

I know this is an experimental tool, But I hope this can be fixed.

[Based on the default startup or an attached .blend file (as simple as possible)]Bug.blend

Bug_E.mp4

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-25 21:21, hash: `dc6fe73e70` Worked: (newest version of Blender that worked as expected) **Short description of error** Add the new Hair curve random to an object, and add Mesh to Volume or Volume Displace and press apply on any of the modifiers, and blender will crash **Exact steps for others to reproduce the error** 1. add the curve Hair random to an object 2. add Mesh to Volume or Volume Displace from the modifier tab 3. click apply or Ctrl + A on the modifier tab and blender will crash I know this is an experimental tool, But I hope this can be fixed. [Based on the default startup or an attached .blend file (as simple as possible)][Bug.blend](https://archive.blender.org/developer/F13109032/Bug.blend) [Bug_E.mp4](https://archive.blender.org/developer/F13109033/Bug_E.mp4)
Author

Added subscriber: @DeadDrag0

Added subscriber: @DeadDrag0
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
* thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0)
  * frame #0: 0x00000000031c307e blender`::CustomData_number_of_layers(data=0x00007fffcf62da80, type=16) at customdata.cc:2908:25
    frame #1: 0x0000000003468a40 blender`::BKE_mesh_merge_customdata_for_apply_modifier(me=0x00007fffcf62d688) at mesh_merge_customdata.cc:109:34
    frame #2: 0x0000000004b0d7b6 blender`modifier_apply_exec_ex(C=0x00007ffff3f85388, op=0x00007fffcf7fd488, apply_as=1, keep_modifier=false) at object_modifier.cc:1473:5
    frame #3: 0x0000000004b07054 blender`modifier_apply_exec(C=0x00007ffff3f85388, op=0x00007fffcf7fd488) at object_modifier.cc:1493:10
    frame #4: 0x0000000004b06feb blender`modifier_apply_invoke(C=0x00007ffff3f85388, op=0x00007fffcf7fd488, event=0x00007fffdb06d2e8) at object_modifier.cc:1513:12
    frame #5: 0x0000000003757a59 blender`wm_operator_invoke(C=0x00007ffff3f85388, ot=0x00007ffff4472468, event=0x00007fffdb06d2e8, properties=0x00007fffdadb73c8, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.c:1388:16
    frame #6: 0x000000000375a871 blender`wm_handler_operator_call(C=0x00007ffff3f85388, handlers=0x00007fffeb808780, handler_base=0x00007fffebdc4de8, event=0x00007fffdb06d2e8, properties=0x00007fffdadb73c8, kmi_idname="OBJECT_OT_modifier_apply") at wm_event_system.c:2424:16
    frame #7: 0x00000000037592a7 blender`wm_handlers_do_keymap_with_keymap_handler(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, handlers=0x00007fffeb808780, handler=0x00007fffebdc4de8, keymap=0x00007fffdaf93148, do_debug_handler=false) at wm_event_system.c:2814:21
    frame #8: 0x000000000375893c blender`wm_handlers_do_intern(C=0x00007ffff3f85388, win=0x00007fffeb865188, event=0x00007fffdb06d2e8, handlers=0x00007fffeb808780) at wm_event_system.c:3139:26
    frame #9: 0x0000000003750e4f blender`wm_handlers_do(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, handlers=0x00007fffeb808780) at wm_event_system.c:3279:16
    frame #10: 0x000000000375b4ae blender`wm_event_do_region_handlers(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, region=0x00007fffeb808648) at wm_event_system.c:3696:10
    frame #11: 0x0000000003751f41 blender`wm_event_do_handlers_area_regions(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, area=0x00007fffeb7f9a48) at wm_event_system.c:3726:10
    frame #12: 0x00000000037501f3 blender`wm_event_do_handlers(C=0x00007ffff3f85388) at wm_event_system.c:3923:23
    frame #13: 0x0000000003743097 blender`WM_main(C=0x00007ffff3f85388) at wm.c:623:5
    frame #14: 0x0000000002f7a093 blender`main(argc=1, argv=0x00007fffffffea08) at creator.c:547:5
    frame #15: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128
    frame #16: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138
    frame #17: 0x0000000002f79ba5 blender`_start + 37
``` * thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x0) * frame #0: 0x00000000031c307e blender`::CustomData_number_of_layers(data=0x00007fffcf62da80, type=16) at customdata.cc:2908:25 frame #1: 0x0000000003468a40 blender`::BKE_mesh_merge_customdata_for_apply_modifier(me=0x00007fffcf62d688) at mesh_merge_customdata.cc:109:34 frame #2: 0x0000000004b0d7b6 blender`modifier_apply_exec_ex(C=0x00007ffff3f85388, op=0x00007fffcf7fd488, apply_as=1, keep_modifier=false) at object_modifier.cc:1473:5 frame #3: 0x0000000004b07054 blender`modifier_apply_exec(C=0x00007ffff3f85388, op=0x00007fffcf7fd488) at object_modifier.cc:1493:10 frame #4: 0x0000000004b06feb blender`modifier_apply_invoke(C=0x00007ffff3f85388, op=0x00007fffcf7fd488, event=0x00007fffdb06d2e8) at object_modifier.cc:1513:12 frame #5: 0x0000000003757a59 blender`wm_operator_invoke(C=0x00007ffff3f85388, ot=0x00007ffff4472468, event=0x00007fffdb06d2e8, properties=0x00007fffdadb73c8, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.c:1388:16 frame #6: 0x000000000375a871 blender`wm_handler_operator_call(C=0x00007ffff3f85388, handlers=0x00007fffeb808780, handler_base=0x00007fffebdc4de8, event=0x00007fffdb06d2e8, properties=0x00007fffdadb73c8, kmi_idname="OBJECT_OT_modifier_apply") at wm_event_system.c:2424:16 frame #7: 0x00000000037592a7 blender`wm_handlers_do_keymap_with_keymap_handler(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, handlers=0x00007fffeb808780, handler=0x00007fffebdc4de8, keymap=0x00007fffdaf93148, do_debug_handler=false) at wm_event_system.c:2814:21 frame #8: 0x000000000375893c blender`wm_handlers_do_intern(C=0x00007ffff3f85388, win=0x00007fffeb865188, event=0x00007fffdb06d2e8, handlers=0x00007fffeb808780) at wm_event_system.c:3139:26 frame #9: 0x0000000003750e4f blender`wm_handlers_do(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, handlers=0x00007fffeb808780) at wm_event_system.c:3279:16 frame #10: 0x000000000375b4ae blender`wm_event_do_region_handlers(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, region=0x00007fffeb808648) at wm_event_system.c:3696:10 frame #11: 0x0000000003751f41 blender`wm_event_do_handlers_area_regions(C=0x00007ffff3f85388, event=0x00007fffdb06d2e8, area=0x00007fffeb7f9a48) at wm_event_system.c:3726:10 frame #12: 0x00000000037501f3 blender`wm_event_do_handlers(C=0x00007ffff3f85388) at wm_event_system.c:3923:23 frame #13: 0x0000000003743097 blender`WM_main(C=0x00007ffff3f85388) at wm.c:623:5 frame #14: 0x0000000002f7a093 blender`main(argc=1, argv=0x00007fffffffea08) at creator.c:547:5 frame #15: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128 frame #16: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138 frame #17: 0x0000000002f79ba5 blender`_start + 37 ```
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2022-05-30 15:49:35 +02:00
Member

Thanks for the report.

I'm pretty sure this is caused by 78fc5ea1c3 assuming that object->data is a mesh.

The fix is simple.

Thanks for the report. I'm pretty sure this is caused by 78fc5ea1c398f70d22cda72be33c105146c0d542 assuming that `object->data` is a mesh. The fix is simple.

This issue was referenced by 18a17d4291

This issue was referenced by 18a17d42911d804adc4ab072d00f4c1967337cf6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98403
No description provided.